# WordCount

./: CMakeLists.txt  README.md  base_manager.cpp  base_manager.h  config.cpp  counter.cpp  counter.h  main.cpp  simple_manager.cpp  simple_manager.h  typedefs.h
data/ETEXT02/: SOCHI_README.TXT
data/test/1/1/1/: a  b
data/test/1/1/2/: a.txt
data/test/3/: a
data/test/4/1/: a
data/test/4/1/1/: a  b
data/test/5/: a  b.txt
data/test/6/: b  c  d.txt  e.txt
include/wordcount/: base_manager.h  counter.h  indexer.h  merger.h  queue.h  queue_manager.h  simple_manager.h
src/: counter.cpp  indexer.cpp  main.cpp  merger.cpp  queue_manager.cpp  simple_manager.cpp  typedefs.h  utils.cpp  utils.h
wordcount1/: CMakeLists.txt  equality_check.py
wordcount1/include/wordcount/: base_manager.h  config.h
wordcount1/src/: base_manager.cpp  config.cpp  main.cpp  simple_manager.cpp  utils.h
wordcount2/: CMakeLists.txt  equality_check.py
wordcount2/include/wordcount/: counter.h  indexer.h  queue.h  queue_manager.h
wordcount2/src/: counter.cpp  indexer.cpp  main.cpp  merger.cpp  queue_manager.cpp  utils.cpp
